Feat: Add API definition POST:"/v1/user_groups".
