# sqle/docs/swagger.json
@@ -2230,6 +2230,46 @@
                 }
             }
         },
+        "/v1/user_groups": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "create user group",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user_group"
+                ],
+                "summary": "创建用户组",
+                "operationId": "CreateUserGroupV1",
+                "parameters": [
+                    {
+                        "description": "create user group",
+                        "name": "instance",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.CreateUserGroupReqV1"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.BaseRes"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/user_tips": {
             "get": {
                 "security": [
@@ -3710,6 +3750,28 @@
                 },
                 "rule_template_name": {
                     "type": "string"
+                }
+            }
+        },
+        "v1.CreateUserGroupReqV1": {
+            "type": "object",
+            "properties": {
+                "is_disabled": {
+                    "type": "boolean"
+                },
+                "user_group_desc": {
+                    "type": "string",
+                    "example": "this is a group"
+                },
+                "user_group_name": {
+                    "type": "string",
+                    "example": "test"
+                },
+                "user_name_list": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
